--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -279,37 +279,83 @@
                                     <constraint firstItem="KTd-Hk-2oP" firstAttribute="leading" secondItem="wBp-tO-dh3" secondAttribute="leading" id="tT5-xP-Edv"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDk-IO-9d3">
-                                <rect key="frame" x="101" y="139" width="221" height="55"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDk-IO-9d3">
+                                <rect key="frame" x="16" y="96" width="382" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="vJO-az-VVx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="40"/>
                                 <color key="textColor" red="0.90823108460000002" green="0.081871332150000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q8d-aX-Zzs">
-                                <rect key="frame" x="113" y="284" width="157" height="30"/>
-                                <state key="normal" title="Send Button!!!">
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AeY-zM-M6P" userLabel="ProgressContainerView">
+                                <rect key="frame" x="97" y="167" width="220" height="220"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EKe-vF-IZz" customClass="M13ProgressViewPie">
+                                        <rect key="frame" x="-110" y="-110" width="440" height="440"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="recording_logo" translatesAutoresizingMaskIntoConstraints="NO" id="5M6-sZ-ZWq">
+                                        <rect key="frame" x="10" y="10" width="200" height="200"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.48128892690000002" blue="0.29840627149999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="5M6-sZ-ZWq" secondAttribute="trailing" constant="10" id="4Ic-iq-ISh"/>
+                                    <constraint firstItem="5M6-sZ-ZWq" firstAttribute="top" secondItem="AeY-zM-M6P" secondAttribute="top" constant="10" id="LDV-g4-3IU"/>
+                                    <constraint firstAttribute="width" constant="220" id="XSc-w5-Ga2"/>
+                                    <constraint firstItem="5M6-sZ-ZWq" firstAttribute="leading" secondItem="AeY-zM-M6P" secondAttribute="leading" constant="10" id="Xp2-KS-hMG"/>
+                                    <constraint firstAttribute="height" constant="220" id="p3y-88-mjJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="5M6-sZ-ZWq" secondAttribute="bottom" constant="10" id="zKd-cs-eUp"/>
+                                </constraints>
+                            </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tap_to_send" translatesAutoresizingMaskIntoConstraints="NO" id="mIn-yH-lj8">
+                                <rect key="frame" x="136" y="413" width="142" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="142" id="Rpo-MD-35y"/>
+                                    <constraint firstAttribute="height" constant="25" id="aqL-SK-tcA"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q8d-aX-Zzs" userLabel="SendVoiceButton">
+                                <rect key="frame" x="16" y="72" width="382" height="592"/>
+                                <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
+                                    <action selector="sendButtonDown:" destination="72p-Nj-Mys" eventType="touchDown" id="UXC-0C-X5e"/>
                                     <action selector="sendButtonPressed:" destination="72p-Nj-Mys" eventType="touchUpInside" id="Z5M-fY-noQ"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Q8d-aX-Zzs" firstAttribute="top" secondItem="5Fg-2m-Bqw" secondAttribute="bottom" constant="8" id="2LJ-cU-IvI"/>
                             <constraint firstAttribute="trailing" secondItem="wBp-tO-dh3" secondAttribute="trailing" id="8Ea-W2-b7Q"/>
                             <constraint firstItem="5Fg-2m-Bqw" firstAttribute="top" secondItem="BtP-te-qTt" secondAttribute="topMargin" id="GkR-Sd-QtT"/>
+                            <constraint firstItem="DDk-IO-9d3" firstAttribute="top" secondItem="5Fg-2m-Bqw" secondAttribute="bottom" constant="32" id="GtY-9E-Ndn"/>
                             <constraint firstItem="5Fg-2m-Bqw" firstAttribute="leading" secondItem="BtP-te-qTt" secondAttribute="leadingMargin" constant="-16" id="NPY-sw-bd7"/>
+                            <constraint firstAttribute="centerX" secondItem="AeY-zM-M6P" secondAttribute="centerX" id="QGd-Ne-kBh"/>
+                            <constraint firstItem="Q8d-aX-Zzs" firstAttribute="leading" secondItem="BtP-te-qTt" secondAttribute="leading" constant="16" id="RsZ-mp-Ftb"/>
+                            <constraint firstItem="wBp-tO-dh3" firstAttribute="top" secondItem="Q8d-aX-Zzs" secondAttribute="bottom" constant="8" id="Sdy-Hr-JYd"/>
+                            <constraint firstAttribute="centerX" secondItem="mIn-yH-lj8" secondAttribute="centerX" id="Vse-jX-fpJ"/>
                             <constraint firstItem="IZW-Qj-bwP" firstAttribute="top" secondItem="wBp-tO-dh3" secondAttribute="bottom" id="W60-qR-WQa"/>
                             <constraint firstItem="wBp-tO-dh3" firstAttribute="leading" secondItem="BtP-te-qTt" secondAttribute="leading" id="dIr-h7-Xfx"/>
                             <constraint firstAttribute="trailingMargin" secondItem="5Fg-2m-Bqw" secondAttribute="trailing" constant="-16" id="duL-cd-HhP"/>
+                            <constraint firstItem="AeY-zM-M6P" firstAttribute="top" secondItem="DDk-IO-9d3" secondAttribute="bottom" constant="31" id="e2A-Vl-X3P"/>
+                            <constraint firstItem="DDk-IO-9d3" firstAttribute="leading" secondItem="BtP-te-qTt" secondAttribute="leadingMargin" id="kCh-Rz-bO2"/>
+                            <constraint firstItem="DDk-IO-9d3" firstAttribute="trailing" secondItem="BtP-te-qTt" secondAttribute="trailingMargin" id="mR9-2s-I9O"/>
+                            <constraint firstItem="mIn-yH-lj8" firstAttribute="top" secondItem="AeY-zM-M6P" secondAttribute="bottom" constant="26" id="u2n-0D-lH8"/>
+                            <constraint firstAttribute="trailing" secondItem="Q8d-aX-Zzs" secondAttribute="trailing" constant="16" id="uXf-Wc-xr4"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="counterLabel" destination="DDk-IO-9d3" id="eCh-Xh-DIS"/>
+                        <outlet property="m13ProgressViewPie" destination="EKe-vF-IZz" id="VRj-8q-v5m"/>
                         <outlet property="navigationSubTitleLabel" destination="Ec0-0X-HbZ" id="n2p-kF-D4C"/>
                         <outlet property="navigationTitleLabel" destination="p0C-QR-yma" id="x9v-sT-ezP"/>
                         <outlet property="pauseButton" destination="nAO-My-tGi" id="HqJ-5C-0je"/>
+                        <outlet property="progressCenterImageView" destination="5M6-sZ-ZWq" id="Hgt-jg-aqc"/>
+                        <outlet property="progressContainerView" destination="AeY-zM-M6P" id="BXm-vR-eE1"/>
                         <outlet property="rerecordButton" destination="DWt-x2-XlP" id="1no-Vp-brg"/>
                         <outlet property="resumeButton" destination="FDP-TD-UfN" id="DGQ-HX-hEQ"/>
                         <outlet property="seperatorView" destination="KTd-Hk-2oP" id="ovH-fM-5CC"/>
@@ -330,6 +376,8 @@
         <image name="icon_back" width="22" height="37"/>
         <image name="icon_down" width="9" height="5"/>
         <image name="icon_search" width="27" height="27"/>
+        <image name="recording_logo" width="402" height="399"/>
+        <image name="tap_to_send" width="278" height="50"/>
         <image name="textfield_bg" width="596" height="60"/>
     </resources>
 </document>
