--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -20,12 +20,112 @@
                         </textAttributes>
                     </navigationBar>
                     <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="IBW-5b-Ff9"/>
+                        <segue destination="291-YT-7kX" kind="relationship" relationship="rootViewController" id="Ikf-gY-d3W"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z1A-p2-aIj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1004" y="154"/>
+            <point key="canvasLocation" x="-1638" y="154"/>
+        </scene>
+        <!--Tutorial View Controller-->
+        <scene sceneID="ZnF-5d-yUK">
+            <objects>
+                <viewController id="291-YT-7kX" customClass="TutorialViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xe7-gx-X2K"/>
+                        <viewControllerLayoutGuide type="bottom" id="v6u-zx-4Dz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="7FG-oV-f4Q">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lcd-bo-1RH" customClass="SwipeView">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7N-ky-1Pr">
+                                        <rect key="frame" x="169" y="696" width="18" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="18" id="LIu-Xa-wSd"/>
+                                            <constraint firstAttribute="width" constant="18" id="ML2-lV-9Fh"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="geS-9R-exl"/>
+                                            <constraint firstAttribute="height" constant="18" id="rMl-qR-DTc"/>
+                                        </constraints>
+                                        <state key="normal" image="dot">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="selected" image="eye"/>
+                                        <connections>
+                                            <action selector="page1ButtonPressed:" destination="291-YT-7kX" eventType="touchUpInside" id="cTW-P3-NKr"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="peY-rl-asT">
+                                        <rect key="frame" x="198" y="696" width="18" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="18" id="e6l-x7-zza"/>
+                                            <constraint firstAttribute="height" constant="18" id="vSx-S5-yzI"/>
+                                        </constraints>
+                                        <state key="normal" image="dot">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="selected" image="eye"/>
+                                        <connections>
+                                            <action selector="page2ButtonPressed:" destination="291-YT-7kX" eventType="touchUpInside" id="XSz-ZJ-MjA"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b25-bB-VfQ">
+                                        <rect key="frame" x="227" y="696" width="18" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="18" id="1A2-1K-UxZ"/>
+                                            <constraint firstAttribute="height" constant="18" id="1Nc-gk-tJM"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="18" id="GkT-I8-Lj7"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="ZaR-L1-drn"/>
+                                            <constraint firstAttribute="width" constant="18" id="owO-7Q-jWc"/>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="18" id="wQC-5M-aNd"/>
+                                        </constraints>
+                                        <state key="normal" image="dot">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="selected" image="eye"/>
+                                        <connections>
+                                            <action selector="page3ButtonPressed:" destination="291-YT-7kX" eventType="touchUpInside" id="nBh-pB-ra5"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="peY-rl-asT" firstAttribute="leading" secondItem="T7N-ky-1Pr" secondAttribute="trailing" constant="11" id="0U9-Bz-Jxe"/>
+                                    <constraint firstAttribute="bottom" secondItem="peY-rl-asT" secondAttribute="bottom" constant="22" id="OPc-o2-FY8"/>
+                                    <constraint firstAttribute="bottom" secondItem="b25-bB-VfQ" secondAttribute="bottom" constant="22" id="PUS-1K-jXs"/>
+                                    <constraint firstAttribute="bottom" secondItem="T7N-ky-1Pr" secondAttribute="bottom" constant="22" id="Rbt-de-7kR"/>
+                                    <constraint firstAttribute="centerX" secondItem="peY-rl-asT" secondAttribute="centerX" id="Rbv-jQ-sFg"/>
+                                    <constraint firstItem="b25-bB-VfQ" firstAttribute="leading" secondItem="peY-rl-asT" secondAttribute="trailing" constant="11" id="k6W-s9-C0e"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="291-YT-7kX" id="kXz-4K-sS3"/>
+                                    <outlet property="delegate" destination="291-YT-7kX" id="Med-WE-J70"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="v6u-zx-4Dz" firstAttribute="top" secondItem="Lcd-bo-1RH" secondAttribute="bottom" id="hBg-pO-GnP"/>
+                            <constraint firstItem="Lcd-bo-1RH" firstAttribute="leading" secondItem="7FG-oV-f4Q" secondAttribute="leading" id="l6I-B9-SAk"/>
+                            <constraint firstAttribute="trailing" secondItem="Lcd-bo-1RH" secondAttribute="trailing" id="t5S-ZI-MuX"/>
+                            <constraint firstItem="Lcd-bo-1RH" firstAttribute="top" secondItem="7FG-oV-f4Q" secondAttribute="top" id="xor-Zg-oil"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="pTF-gM-LkG"/>
+                    <connections>
+                        <outlet property="page1Button" destination="T7N-ky-1Pr" id="qzQ-g0-Wjs"/>
+                        <outlet property="page2Button" destination="peY-rl-asT" id="CnK-cn-zJz"/>
+                        <outlet property="page3Button" destination="b25-bB-VfQ" id="mI6-Sm-FPJ"/>
+                        <outlet property="swipeView" destination="Lcd-bo-1RH" id="tad-jB-tdf"/>
+                        <segue destination="vXZ-lx-hvc" kind="show" identifier="ContactsViewControllerSegue" id="3NV-4b-w0Z"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t6a-0k-QCz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1064" y="154"/>
         </scene>
         <!--Contacts View Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -194,7 +294,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="207" height="64"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DWt-x2-XlP" userLabel="ReRecord Button">
-                                                <rect key="frame" x="23" y="0.0" width="160" height="64"/>
+                                                <rect key="frame" x="24" y="0.0" width="160" height="64"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="160" id="0Rz-tI-8rw"/>
                                                     <constraint firstAttribute="height" constant="64" id="18W-vW-9p4"/>
@@ -232,7 +332,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FDP-TD-UfN" userLabel="Resume Button">
-                                                <rect key="frame" x="23" y="0.0" width="160" height="64"/>
+                                                <rect key="frame" x="24" y="0.0" width="160" height="64"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="64" id="Moz-8G-oJw"/>
                                                     <constraint firstAttribute="width" constant="160" id="r2Z-ru-gJf"/>
@@ -363,7 +463,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hsp-tK-r5C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28" y="154"/>
+            <point key="canvasLocation" x="76" y="154"/>
         </scene>
     </scenes>
     <resources>
@@ -373,6 +473,8 @@
         <image name="button_rerecord_pressed" width="320" height="128"/>
         <image name="button_resume" width="320" height="128"/>
         <image name="button_resume_pressed" width="320" height="128"/>
+        <image name="dot" width="18" height="18"/>
+        <image name="eye" width="18" height="18"/>
         <image name="icon_back" width="22" height="37"/>
         <image name="icon_down" width="9" height="5"/>
         <image name="icon_search" width="27" height="27"/>
